--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@types/cors": "^2.8.14",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "cors": "^2.8.5",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "killua": "^0.1.2",
     "mongoose": "^7.5.1",
     "next": "13.4.19",
     "postcss": "8.4.29",
@@ -24,6 +27,7 @@
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-swipeable": "^7.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "zod": "^3.22.2"
